--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"Control",
+"class": &"BoilPot",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_states/01_pour_milk/boil_pot.gd"
+}, {
+"base": &"Control",
 "class": &"GameState",
 "icon": "",
 "language": &"GDScript",
