--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game_states/game_state.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://game_data/player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_states/", "res://game_data/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -25,16 +25,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_states/01_pour_milk/pour_milk.tscn")
+open_scenes=PackedStringArray("res://game_states/01_pour_milk/pour_milk.tscn", "res://game_states/01_pour_milk/boil_pot.tscn")
 current_scene="res://game_states/01_pour_milk/pour_milk.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=7
 
 [ScriptEditor]
 
-open_scripts=["res://game_states/game_state.gd", "res://game_data/player_options.gd", "res://game_states/01_pour_milk/pour_milk.gd"]
-selected_script="res://game_states/game_state.gd"
+open_scripts=["res://game_states/01_pour_milk/boil_pot.gd", "res://game_states/game_state.gd", "res://game_data/player.gd", "res://game_data/player_options.gd", "res://game_states/01_pour_milk/pour_milk.gd"]
+selected_script="res://game_data/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -42,7 +43,7 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://game_states/01_pour_milk/milk_top.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://game_states/01_pour_milk/milk_top.gdshader"
 text_shader_zoom_factor=1.0
