--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -12,6 +12,12 @@ list=Array[Dictionary]([{
 "path": "res://game_states/game_state.gd"
 }, {
 "base": &"Resource",
+"class": &"PlayerData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_data/player_data.gd"
+}, {
+"base": &"Resource",
 "class": &"PlayerOptions",
 "icon": "",
 "language": &"GDScript",
