--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game_states/01_pour_milk/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_states/", "res://game_states/01_pour_milk/", "res://game_data/")
+dock_filesystem_selected_paths=PackedStringArray("res://game_states/01_make_yog/make_yog.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_states/", "res://game_states/01_make_yog/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_states/01_pour_milk/pour_milk.tscn", "res://game_states/01_pour_milk/boil_pot.tscn")
-current_scene="res://game_states/01_pour_milk/pour_milk.tscn"
+open_scenes=PackedStringArray("res://game_states/01_make_yog/boil_pot.tscn", "res://game_states/01_make_yog/make_yog.tscn")
+current_scene="res://game_states/01_make_yog/make_yog.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game_states/01_pour_milk/boil_pot.gd", "res://game_states/game_state.gd", "res://game_data/player.gd", "res://game_data/player_data.gd", "res://game_data/player_options.gd", "res://game_states/01_pour_milk/pour_milk.gd"]
-selected_script="res://game_states/01_pour_milk/pour_milk.gd"
+open_scripts=["res://game_states/01_make_yog/boil_pot.gd", "res://game_states/game_state.gd", "res://game_data/player.gd", "res://game_data/player_data.gd", "res://game_data/player_options.gd", "res://game_states/01_make_yog/make_yog.gd"]
+selected_script="res://game_states/01_make_yog/make_yog.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -43,7 +43,7 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=["res://game_states/01_pour_milk/milk_top.gdshader"]
+open_shaders=["res://game_states/01_make_yog/milk_top.gdshader", "res://game_states/01_make_yog/fire.tres"]
 split_offset=0
-selected_shader="res://game_states/01_pour_milk/milk_top.gdshader"
+selected_shader="res://game_states/01_make_yog/fire.tres"
 text_shader_zoom_factor=1.0
