refactoring state/scene logic

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -12,29 +12,15 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://game_states/game_state.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 3,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://game_data/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -54,7 +40,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://game_states/01_make_yog/boil_pot.gd]
+[res://game_scenes/01_make_yog/boil_pot.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -63,12 +49,86 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 7,
-"scroll_position": 8.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://game_states/01_make_yog/make_yog.gd]
+[res://game_scenes/01_make_yog/make_yog.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_scenes/game_scene.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_scenes/game_state.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 19,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 7,
+"selection_from_line": 3,
+"selection_to_column": 19,
+"selection_to_line": 3,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_scenes/01_make_yog/states/pour_milk.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_scenes/01_make_yog/states/heat_milk.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://game_scenes/01_make_yog/make_game_state.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -76,8 +136,12 @@ state={
 "column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 0,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 11,
+"selection_from_line": 0,
+"selection_to_column": 27,
+"selection_to_line": 0,
 "syntax_highlighter": "GDScript"
 }
