--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,13 +3,37 @@ list=Array[Dictionary]([{
 "class": &"BoilPot",
 "icon": "",
 "language": &"GDScript",
-"path": "res://game_states/01_make_yog/boil_pot.gd"
+"path": "res://game_scenes/01_make_yog/boil_pot.gd"
 }, {
 "base": &"Control",
+"class": &"GameScene",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/game_scene.gd"
+}, {
+"base": &"RefCounted",
 "class": &"GameState",
 "icon": "",
 "language": &"GDScript",
-"path": "res://game_states/game_state.gd"
+"path": "res://game_scenes/game_state.gd"
+}, {
+"base": &"GameState",
+"class": &"HeatMilkState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/states/heat_milk.gd"
+}, {
+"base": &"GameState",
+"class": &"MakeYogGameState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/make_game_state.gd"
+}, {
+"base": &"GameScene",
+"class": &"MakeYogurtScene",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/make_yog.gd"
 }, {
 "base": &"Resource",
 "class": &"PlayerData",
@@ -22,4 +46,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://game_data/player_options.gd"
+}, {
+"base": &"MakeYogGameState",
+"class": &"PourMilkState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/states/pour_milk.gd"
 }])
