--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,7 +17,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://game_scenes/game_state.gd"
 }, {
-"base": &"GameState",
+"base": &"MakeYogGameState",
 "class": &"HeatMilkState",
 "icon": "",
 "language": &"GDScript",
