--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,7 +25,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_scenes/01_make_yog/boil_pot.tscn", "res://game_scenes/01_make_yog/make_yog.tscn")
+open_scenes=PackedStringArray("res://game_scenes/01_make_yog/make_yog.tscn", "res://game_scenes/01_make_yog/boil_pot.tscn")
 current_scene="res://game_scenes/01_make_yog/make_yog.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -34,7 +34,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game_scenes/01_make_yog/boil_pot.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/make_game_state.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd"]
+open_scripts=["res://game_scenes/01_make_yog/boil_pot.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd"]
 selected_script="res://game_scenes/01_make_yog/make_yog.gd"
 open_help=[]
 script_split_offset=70
