time flies when you're makeing yogurt

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,9 +1,15 @@
 list=Array[Dictionary]([{
-"base": &"Control",
+"base": &"YogJar",
 "class": &"BoilPot",
 "icon": "",
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/boil_pot.gd"
+}, {
+"base": &"MakeYogGameState",
+"class": &"CoolMilkState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/states/cool_milk.gd"
 }, {
 "base": &"Control",
 "class": &"GameScene",
@@ -23,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/states/heat_milk.gd"
 }, {
+"base": &"Control",
+"class": &"IceBath",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/ice_bath.gd"
+}, {
 "base": &"GameState",
 "class": &"MakeYogGameState",
 "icon": "",
@@ -34,6 +46,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/make_yog.gd"
+}, {
+"base": &"RefCounted",
+"class": &"MilkPotData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/milk_pot_data.gd"
 }, {
 "base": &"Resource",
 "class": &"PlayerData",
@@ -52,4 +70,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/states/pour_milk.gd"
+}, {
+"base": &"CenterContainer",
+"class": &"TempMeter",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/temp_meter.gd"
+}, {
+"base": &"Control",
+"class": &"YogJar",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/yog_jar.gd"
 }])
