--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,25 +17,25 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game_scenes/01_make_yog/make_game_state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_scenes/", "res://game_scenes/01_make_yog/")
+dock_filesystem_selected_paths=PackedStringArray("res://game_scenes/01_make_yog/yog_jar.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_scenes/", "res://game_scenes/01_make_yog/", "res://game_scenes/01_make_yog/states/", "res://game_data/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game_scenes/01_make_yog/make_yog.tscn", "res://game_scenes/01_make_yog/boil_pot.tscn")
-current_scene="res://game_scenes/01_make_yog/make_yog.tscn"
+open_scenes=PackedStringArray("res://game_scenes/01_make_yog/make_yog.tscn", "res://game_scenes/01_make_yog/yog_jar.tscn")
+current_scene="res://game_scenes/01_make_yog/yog_jar.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game_scenes/01_make_yog/boil_pot.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd"]
-selected_script="res://game_scenes/01_make_yog/make_yog.gd"
+open_scripts=["res://game_scenes/01_make_yog/boil_pot.gd", "res://game_scenes/01_make_yog/states/cool_milk.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/make_game_state.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/milk_pot_data.gd", "res://game_data/player.gd", "res://game_data/player_data.gd", "res://game_data/player_options.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd", "res://game_scenes/01_make_yog/temp_meter.gd", "res://game_scenes/01_make_yog/yog_jar.gd"]
+selected_script="res://game_scenes/01_make_yog/boil_pot.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -45,5 +45,5 @@ zoom_factor=1.0
 
 open_shaders=["res://game_scenes/01_make_yog/milk_top.gdshader", "res://game_scenes/01_make_yog/fire.tres"]
 split_offset=0
-selected_shader="res://game_scenes/01_make_yog/fire.tres"
+selected_shader="res://game_scenes/01_make_yog/milk_top.gdshader"
 text_shader_zoom_factor=1.0
