pouring the milks

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/states/cool_milk.gd"
 }, {
+"base": &"MakeYogGameState",
+"class": &"FillJarsState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://game_scenes/01_make_yog/states/fill_jars.gd"
+}, {
 "base": &"Control",
 "class": &"GameScene",
 "icon": "",
@@ -47,7 +53,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://game_scenes/01_make_yog/make_yog.gd"
 }, {
-"base": &"RefCounted",
+"base": &"Resource",
 "class": &"MilkPotData",
 "icon": "",
 "language": &"GDScript",
