--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://game_scenes/01_make_yog/yog_jar.gd")
+dock_filesystem_selected_paths=PackedStringArray()
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://game_scenes/", "res://game_scenes/01_make_yog/", "res://game_scenes/01_make_yog/states/", "res://game_data/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://game_scenes/01_make_yog/boil_pot.gd", "res://game_scenes/01_make_yog/states/cool_milk.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/make_game_state.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/milk_pot_data.gd", "res://game_data/player.gd", "res://game_data/player_data.gd", "res://game_data/player_options.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd", "res://game_scenes/01_make_yog/temp_meter.gd", "res://game_scenes/01_make_yog/yog_jar.gd"]
-selected_script="res://game_scenes/01_make_yog/milk_pot_data.gd"
+open_scripts=["res://game_scenes/01_make_yog/states/cool_milk.gd", "res://game_scenes/01_make_yog/states/fill_jars.gd", "res://game_scenes/game_scene.gd", "res://game_scenes/game_state.gd", "res://game_scenes/01_make_yog/states/heat_milk.gd", "res://game_scenes/01_make_yog/ice_bath.gd", "res://game_scenes/01_make_yog/make_game_state.gd", "res://game_scenes/01_make_yog/make_yog.gd", "res://game_scenes/01_make_yog/milk_pot_data.gd", "res://game_data/player.gd", "res://game_data/player_data.gd", "res://game_data/player_options.gd", "res://game_scenes/01_make_yog/states/pour_milk.gd"]
+selected_script="res://game_data/player_data.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
